fix(env and auth): move tokens and types into sep files and modify env example

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -5,3 +5,8 @@ DB_PASSWORD=postgres
 DB_DATABASE=skillswap
 DB_SYNCHRONIZE=false
 DB_LOGGING=true
+PORT=3000
+JWT_SECRET=big_secret
+JWT_REFRESH_SECRET=big_refresh_secret
+JWT_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=7d
