--- a/.env.dev.example
+++ b/.env.dev.example
@@ -10,3 +10,5 @@ JWT_SECRET=big_secret
 JWT_REFRESH_SECRET=big_refresh_secret
 JWT_EXPIRES_IN=1h
 JWT_REFRESH_EXPIRES_IN=7d
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin1234
