--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "seed:categories": "ts-node -r tsconfig-paths/register src/seeding/categorys.seeder.ts",
+    "seed:test:users": "ts-node -r tsconfig-paths/register src/seeding/users.seeder.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
