--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "seed:categories": "ts-node -r tsconfig-paths/register src/seeding/categorys.seeder.ts",
     "seed:test:users": "ts-node -r tsconfig-paths/register src/seeding/users.seeder.ts",
+    "seed:test:skills": "ts-node -r tsconfig-paths/register src/seeding/skills.seeder.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
