--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "seed:admin": "ts-node -r tsconfig-paths/register src/seeding/admin.seed.ts",
     "seed:categories": "ts-node -r tsconfig-paths/register src/seeding/categorys.seeder.ts",
     "seed:test:users": "ts-node -r tsconfig-paths/register src/seeding/users.seeder.ts",
     "seed:test:skills": "ts-node -r tsconfig-paths/register src/seeding/skills.seeder.ts",
@@ -20,8 +21,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed:admin": "ts-node -r tsconfig-paths/register src/seeds/admin.seed.ts"
+    "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
