--- a/.env.test.local.example
+++ b/.env.test.local.example
@@ -1,14 +1,14 @@
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
-DB_SYNCHRONIZE=
-DB_LOGGING=
-PORT=
-JWT_SECRET=
-JWT_REFRESH_SECRET=
-JWT_EXPIRES_IN=
-JWT_REFRESH_EXPIRES_IN=
-ADMIN_EMAIL=
-ADMIN_PASSWORD=
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=test
+DB_SYNCHRONIZE=true
+DB_LOGGING=true
+PORT=3000
+JWT_SECRET=big_secret
+JWT_REFRESH_SECRET=big_refresh_secret
+JWT_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=7d
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin1234
