--- a/backend/package.json
+++ b/backend/package.json
@@ -16,16 +16,14 @@
     "seed:categories": "ts-node -r tsconfig-paths/register src/seeding/categorys.seeder.ts",
     "seed:test:users": "ts-node -r tsconfig-paths/register src/seeding/users.seeder.ts",
     "seed:admin": "ts-node -r tsconfig-paths/register src/seeds/admin.seed.ts",
-        "seed:test:skills": "ts-node -r tsconfig-paths/register src/seeding/skills.seeder.ts",
+    "seed:test:skills": "ts-node -r tsconfig-paths/register src/seeding/skills.seeder.ts",
     "migrate:generate": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:generate -d src/config/db.config.ts",
     "migrate:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d src/config/db.config.ts",
     "migrate:revert": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:revert -d src/config/db.config.ts",
-
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    
     "test:e2e": "cross-env NODE_ENV=test jest --config test/jest-e2e.json --runInBand",
     "test:e2e:prepare": "cross-env NODE_ENV=test npm run seed:categories && npm run seed:test:users && npm run seed:admin",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
@@ -38,7 +36,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.14",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.14",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -49,6 +49,7 @@
     "pg": "^8.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.3",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
@@ -84,13 +85,19 @@
     "typescript-eslint": "^8.20.0"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
