feat: add mail service

--- a/.env.dev.example
+++ b/.env.dev.example
@@ -12,3 +12,10 @@ JWT_EXPIRES_IN=1h
 JWT_REFRESH_EXPIRES_IN=7d
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin1234
+MAIL_HOST=smtp.mail.ru
+MAIL_PORT=465
+MAIL_SECURE=true
+MAIL_USER=your-email@mail.ru
+MAIL_PASSWORD=your-password
+MAIL_FROM=your-email@mail.ru
+MAIL_FROM_NAME=SkillSwap
