--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.17.1",
@@ -55,6 +56,7 @@
     "@types/jest": "^29.5.14",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.11",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
